--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://nk18chi.github.io/portfolio/",
+  "homepage": "https://nk18chi.github.io/portfolio/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.36",
+    "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
